--- a/src/warpaffine/warpaffine.ipynb
+++ b/src/warpaffine/warpaffine.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### @dong 整理归档 2024.6"
+    "### @dong 深入理解仿射变换 整理归档 2024.6"
    ]
   },
   {
